chore: add tutorial 2 - triangle

--- a/LearningOpenGL.vcxproj
+++ b/LearningOpenGL.vcxproj
@@ -138,7 +138,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="glad.c" />
-    <ClCompile Include="main.cpp" />
+    <ClInclude Include="tutorial1_window.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClCompile Include="tutorial2_triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
