--- a/LearningOpenGL.vcxproj.filters
+++ b/LearningOpenGL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="tutorial2_triangle.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="tutorial3_index_buffer.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
